--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,12 +1,15 @@
 <ul class="navbar-nav my-auto py-2 d-block d-lg-none">
-    <li class="dropdown list-inline-item dropstart" >
-        <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <!-- Search icon and search bar input -->
+    <li class="dropdown list-inline-item dropstart">
+        <a class="nav-link d-block d-lg-none" href="#" aria-label="Link to display search bar" id="mobile-search"
+            type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-search"></i>
         </a>
         <div class="dropdown-menu" id="search-input" aria-labelledby="mobile-search">
             <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
-                    <input class="form-control border border-$gray-500 rounded search-input" type="text" name="q" placeholder="I am looking for...">
+                    <input class="form-control border border-$gray-500 rounded search-input" type="text" name="q"
+                        placeholder="I am looking for...">
                     <div class="input-group-append">
                         <button type="submit" class="form-control border-0">
                             <span>
@@ -18,28 +21,31 @@
             </form>
         </div>
     </li>
+    <!-- User icon and user options dropdown -->
     <li class="dropdown list-inline-item dropstart">
-        <a class="nav-link d-block d-lg-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
+        <a class="nav-link d-block d-lg-none" aria-label="Link to display user options dropdown menu" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <i class="fas fa-user"></i>
         </a>
         <ul class="dropdown-menu" aria-labelledby="user-options">
+            <!-- Nav options dependant on user status -->
             {% if request.user.is_authenticated %}
-                {% if request.user.is_superuser %}
-                <a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a>
-                <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
-                <a href="{% url 'add_blog' %}" class="dropdown-item">Add Blog</a>
-                {% endif %}
-                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+            {% if request.user.is_superuser %}
+            <a href="{% url 'admin:index' %}" aria-label="Link to admin portal" class="dropdown-item">Admin</a>
+            <a href="{% url 'add_product' %}" aria-label="Link to add product page" class="dropdown-item">Add Product</a>
+            <a href="{% url 'add_blog' %}" aria-label="Link to add blog page" class="dropdown-item">Add Blog</a>
+            {% endif %}
+            <a href="{% url 'profile' %}" aria-label="Link to profile page" class="dropdown-item">My Profile</a>
+            <a href="{% url 'account_logout' %}" aria-label="Link to logout page" class="dropdown-item">Logout</a>
             {% else %}
-                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+            <a href="{% url 'account_signup' %}" aria-label="Link to register page" class="dropdown-item">Register</a>
+            <a href="{% url 'account_login' %}" aria-label="Link to login page" class="dropdown-item">Login</a>
             {% endif %}
         </ul>
     </li>
+    <!-- Shopping basket icon -->
     <li class="list-inline-item">
-        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_basket' %}">
+        <a class="nav-link d-block d-lg-none" href="{% url 'view_basket' %}" aria-label="Link to view basket page">
             <div class="text-center">
                 <div><i class="fas fa-solid fa-shopping-basket"></i>
                     <sup>
