Tidy up error pages

--- a/templates/403.html
+++ b/templates/403.html
@@ -4,9 +4,7 @@
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
-        <div class="col">
-
-        </div>
+        <div class="col"></div>
     </div>
 </div>
 {% endblock %}
@@ -18,11 +16,9 @@
         <div class="col-12 text-center">
             <h2 class="mb-3">Ooops that's forbidden</h2>
             <a href="{% url 'home' %}" class="btn btn-blue action-buttons" aria-label="Link back to home page">Back to home page</a>
-
             <!-- Report issue button -->
             <a href="{% url 'contact' %}" class="btn btn-grey action-buttons" aria-label="Link to contact page">Report an issue</a>
         </div>
     </div>
 </div>
-
 {% endblock %}
