--- a/templates/base.html
+++ b/templates/base.html
@@ -4,107 +4,116 @@
 
 <head>
     {% block meta %}
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {% endblock %}
-
-    {% block extra_meta %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% endblock %}
 
     {% block corecss %}
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-            integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!-- Google Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Archivo+Black&family=Inter&family=Source+Sans+Pro:wght@400;700&display=swap"
-            rel="stylesheet">
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400&family=Archivo+Black&family=Inter&family=Source+Sans+Pro:wght@400;700&display=swap"
+        rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
-        <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <!-- Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
-        <!-- Stripe -->
-        <script src="https://js.stripe.com/v3/"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     {% block extra_js %}
     {% endblock %}
 
-    <title>Surf the Wave {% block extra_title %}{% endblock %}</title>
+    <title>Surf the Wave</title>
 </head>
 
 <body class="d-flex flex-column h-100">
     <header class="container-fluid fixed-top bg-white">
         <div class="row pt-lg-2 d-none d-lg-flex">
+            <!-- Logo -->
             <div class="col-4 my-auto py-1">
-                <a href="{% url 'home' %}">
+                <a href="{% url 'home' %}" aria-label="Link to home page">
                     <h1 id="logo">Surf the Wave</h1>
                 </a>
             </div>
+            <!-- Searchbar input -->
             <div class="col-5 my-auto py-2">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <div class="input-group-append">
                             <button type="submit" class="form-control border border-end-0">
-                                <span class="icon">
+                                <span>
                                     <i class="fas fa-search"></i>
                                 </span>
                             </button>
                         </div>
-                        <input class="form-control border border-start-0" type="text" name="q" placeholder="I am looking for...">
+                        <input class="form-control border border-start-0" type="text" name="q"
+                            placeholder="I am looking for...">
                     </div>
                 </form>
             </div>
             <div class="col-3 my-auto py-2">
                 <ul class="list-inline list-unstyled text-end my-0">
+                    <!-- User icon with options dropdown -->
                     <li class="dropdown list-inline-item">
-                        <a class="text-black nav-link" href="#" id="user-options" 
-                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="text-black nav-link" href="#" id="user-options"
+                            aria-label="Link to display user options dropdown menu" data-bs-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
                             <div><i class="fas fa-user fa-lg"></i></div>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
-                                {% if request.user.is_superuser %}
-                                <a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a>
-                                <a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a>
-                                <a href="{% url 'add_blog' %}" class="dropdown-item">Add Blog</a>
-                                {% endif %}
-                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% if request.user.is_superuser %}
+                            <a href="{% url 'admin:index' %}" aria-label="Link to admin portal"
+                                class="dropdown-item">Admin</a>
+                            <a href="{% url 'add_product' %}" aria-label="Link to add product page"
+                                class="dropdown-item">Add Product</a>
+                            <a href="{% url 'add_blog' %}" aria-label="Link to add blog page" class="dropdown-item">Add
+                                Blog</a>
+                            {% endif %}
+                            <a href="{% url 'profile' %}" aria-label="Link to profile page" class="dropdown-item">My
+                                Profile</a>
+                            <a href="{% url 'account_logout' %}" aria-label="Link to logout page"
+                                class="dropdown-item">Logout</a>
                             {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            <a href="{% url 'account_signup' %}" aria-label="Link to register page"
+                                class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" aria-label="Link to login page"
+                                class="dropdown-item">Login</a>
                             {% endif %}
                         </ul>
                     </li>
+                    <!-- Shopping basket icon -->
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="{% url 'view_basket' %}">
+                        <a class="nav-link" href="{% url 'view_basket' %}" aria-label="Link to view basket page">
                             <div class="text-end">
                                 <div><i class="fas fa-solid fa-shopping-basket fa-lg"></i>
                                     <sup>
                                         {% if product_count %}
-                                            {{ product_count|floatformat:0 }}
+                                        {{ product_count|floatformat:0 }}
                                         {% else %}
-                                            0
+                                        0
                                         {% endif %}
                                     </sup>
                                 </div>
@@ -114,26 +123,25 @@
                 </ul>
             </div>
         </div>
+        <!-- Top nav displayed on small screens -->
         <!-- Concept of top-nav modified from GymFit, details in README -->
         <div class="row">
             <nav id="top-nav" class="navbar navbar-expand py-0 px-2">
                 <div class="container-fluid px-0 justify-content-end">
                     {% include 'includes/mobile-top-header.html' %}
                 </div>
-                
             </nav>
-                
         </div>
+        <!-- Main nav -->
         <div class="row">
             <nav class="navbar navbar-light navbar-expand-lg">
-                <a href="{% url 'home' %}" class="d-lg-none">
+                <a href="{% url 'home' %}" aria-label="Link to home page" class="d-lg-none">
                     <h1 id="logo">Surf the Wave</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
@@ -145,22 +153,22 @@
     </header>
 
     {% if messages %}
-        <div class="message-container">
-            {% for message in messages %}
-                {% with message.level as level %}
-                    {% if level == 40 %}
-                        {% include 'includes/toasts/toast-error.html' %}
-                    {% elif level == 30 %}
-                        {% include 'includes/toasts/toast-warning.html' %}
-                    {% elif level == 25 %}
-                        {% include 'includes/toasts/toast-success.html' %}
-                    {% else %}
-                        {% include 'includes/toasts/toast-info.html' %}
-                    {% endif %}
-                {% endwith %}
-            {% endfor %}
-
-        </div>
+    <!-- Displays toast messages -->
+    <div class="message-container">
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast-error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast-warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast-success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast-info.html' %}
+        {% endif %}
+        {% endwith %}
+        {% endfor %}
+    </div>
     {% endif %}
 
     {% block page_header %}
@@ -169,6 +177,7 @@
     {% block content %}
     {% endblock %}
 
+    <!-- Footer -->
     <footer class="mt-auto">
         <div class="row">
             <div class="col-6">
@@ -178,25 +187,33 @@
                     </div>
                 </div>
                 <div class="row ">
+                    <!-- Social media links -->
                     <div class="col-12 d-flex justify-content-center">
                         <ul class="list-inline list-unstyled">
                             <li class="list-inline-item">
-                                <a href="https://www.facebook.com/" target="_blank" aria-label="Go to Facebook" rel="noopener"><i class="fab fa-facebook-square fa-lg"></i></a>
+                                <a href="https://www.facebook.com/" target="_blank" aria-label="Link to go to Facebook"
+                                    rel="noopener"><i class="fab fa-facebook-square fa-lg"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/" target="_blank" aria-label="Go to Instagram" rel="noopener"><i class="fab fa-instagram fa-lg"></i></a>
+                                <a href="https://www.instagram.com/" target="_blank"
+                                    aria-label="Link to go to Instagram" rel="noopener"><i
+                                        class="fab fa-instagram fa-lg"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://twitter.com/" target="_blank" aria-label="Go to Twitter" rel="noopener"><i class="fab fa-twitter fa-lg"></i></a>
+                                <a href="https://twitter.com/" target="_blank" aria-label="Link to go to Twitter"
+                                    rel="noopener"><i class="fab fa-twitter fa-lg"></i></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
+            <!-- Contact and back to top links -->
             <div class="col-6">
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <a href="{% url 'contact' %}" aria-label="Link to go to contact form"><h4>Contact us</h4></a>
+                        <a href="{% url 'contact' %}" aria-label="Link to go to contact form">
+                            <h4>Contact us</h4>
+                        </a>
                     </div>
                 </div>
                 <div class="row">
