--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -157,6 +157,7 @@
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 mt-5">
             <!-- Comment form displayed if user has not left previous comment on this blog -->
             {% if not previous_comment %}
+            {% if user.is_authenticated %}
             <form action="{% url 'blog_detail' blog.id %}" method="POST">
                 {% csrf_token %}
                 {{ comment_form|crispy }}
@@ -167,6 +168,7 @@
                     </a>
                 </div>
             </form>
+            {% endif %}
             {% endif %}
         </div>
     </div>
