--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -220,7 +220,7 @@
                                 <td>{{ review.review_content }}</td>
                                 <td class="icons">
                                     <!-- Allow user to edit own review -->
-                                    {% if request.user.id == review.author %}
+                                    {% if request.user == review.author %}
                                     <a href="{% url 'edit_product_review' review.id %}" aria-label="Link to edit product review page">
                                         <i class="fa-solid fa-pen-to-square"></i>
                                     </a>
@@ -265,9 +265,11 @@
                  <!-- Review button displayed if user has not left previous review for this product -->
                 <div class="col-12 mt-4">
                     {% if not previous_review %}
+                    {% if user.is_authenticated %}
                     <a href="{% url 'create_review' product.id %}">
                         <button class="btn btn-sm btn-grey">Leave a review</button>
                     </a>
+                    {% endif %}
                     {% endif %}
                 </div>
             </div>
