--- a/templates/base.html
+++ b/templates/base.html
@@ -77,12 +77,12 @@
                 <ul class="list-inline list-unstyled text-end my-0">
                     <!-- User icon with options dropdown -->
                     <li class="dropdown list-inline-item">
-                        <a class="text-black nav-link" href="#" id="user-options"
+                        <a class="text-black nav-link" href="#" id="user-desktop-profile-dropdown"
                             aria-label="Link to display user options dropdown menu" data-bs-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             <div><i class="fas fa-user fa-lg"></i></div>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="user-options">
+                        <ul class="dropdown-menu" aria-labelledby="user-desktop-profile-dropdown">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
                             <a href="{% url 'admin:index' %}" aria-label="Link to admin portal"
@@ -147,7 +147,7 @@
         </div>
         <div id="delivery-banner" class="row text-center mb-3">
             <div class="col text-white">
-                <h3>Free delivery on orders over £{{ free_delivery_threshold }}!</h3>
+                <h2>Free delivery on orders over £{{ free_delivery_threshold }}!</h2>
             </div>
         </div>
     </header>
@@ -228,7 +228,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <p class="text-center text-muted">© 2022 Surf the Wave</p>
+                <p class="text-center">© 2022 Surf the Wave</p>
             </div>
         </div>
     </footer>
