--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -23,11 +23,11 @@
     </li>
     <!-- User icon and user options dropdown -->
     <li class="dropdown list-inline-item dropstart">
-        <a class="nav-link d-block d-lg-none" aria-label="Link to display user options dropdown menu" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
+        <a class="nav-link d-block d-lg-none" aria-label="Link to display user options dropdown menu" href="#" id="user-mobile-profile-dropdown" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <i class="fas fa-user"></i>
         </a>
-        <ul class="dropdown-menu" aria-labelledby="user-options">
+        <ul class="dropdown-menu" aria-labelledby="user-mobile-profile-dropdown">
             <!-- Nav options dependant on user status -->
             {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
