--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     <title>Surf the Wave</title>
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column min-vh-100">
     <header class="container-fluid fixed-top bg-white">
         <div class="row pt-lg-2 d-none d-lg-flex">
             <!-- Logo -->
