Amend margins in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
-        <div id="delivery-banner" class="row text-center mb-3">
+        <div id="delivery-banner" class="row text-center">
             <div class="col text-white">
                 <h2>Free delivery on orders over £{{ free_delivery_threshold }}!</h2>
             </div>
@@ -178,7 +178,7 @@
     {% endblock %}
 
     <!-- Footer -->
-    <footer class="mt-auto">
+    <footer class="mt-5">
         <div class="row">
             <div class="col-6">
                 <div class="row">
