Add custom margin and amend footer positioning

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -20,7 +20,7 @@
             <h2>Shopping Basket ({{ product_count }})</h2>
         </div>
     </div>
-    <div class="row">
+    <div class="row custom-margin">
         <div class="col-sm-12 col-md-6">
             <!-- Displays items in users basket -->
             {% if basket_items %}
