--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -83,7 +83,7 @@
             </a>
         </div>
     </div>
-    <div class="row mt-5">
+    <div class="row mt-5 custom-margin">
         <!-- Comments section -->
         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <h3>Comments</h3>
