--- a/blog/templates/blog/edit_blog.html
+++ b/blog/templates/blog/edit_blog.html
@@ -19,7 +19,7 @@
             <h3 class="text-center">Edit a Blog</h3>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Edit blog form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'edit_blog' blog.id %}" method="POST" class="form" enctype="multipart/form-data">
