--- a/blog/templates/blog/edit_blog_comment.html
+++ b/blog/templates/blog/edit_blog_comment.html
@@ -16,7 +16,7 @@
             <h2 class="text-center">Edit Comment</h2>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Edit blog comment form -->
         <div class="col-12 col-md-6 offset-md-3">
                 <form id="edit-comment" action="{% url 'edit_blog_comment' comment.id %}" method="POST">
