--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -20,7 +20,7 @@
             <h2>Checkout</h2>
         </div>
     </div>
-    <div class="row">
+    <div class="row custom-margin">
         <!-- Order form -->
         <div class="col-12 col-lg-6">
             <p>Fill in this form to complete your order</p>
