--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -173,7 +173,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row custom-margin">
         <!-- Action buttons -->
         <div class="col-12 col-lg-7 text-center mt-4">
             <a href="{% url 'blogs' %}" aria-label="Link to blogs page" class="btn btn-sm btn-grey action-buttons">Check out our latest blogs</a>
