--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -62,6 +62,10 @@
     color: #fff;
 }
 
+#custom-margin {
+    margin-bottom: 15rem;
+}
+
 /* Media Queries */
 @media (max-width: 425px) {
     .gallery-sm-img {
