--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -40,7 +40,7 @@
                     </a>
             </div>
         </div>
-        <div class="row gallery">
+        <div class="row gallery custom-margin">
             <div class="col-4 offset-1">
                 <a href="{% url 'blogs' %}" aria-label="Link to blogs page">
                     <img src="{{ MEDIA_URL }}surfboard-van-home.jpg" alt="Sea view from a van with surfboard" class="gallery-sm-img">
