--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container header-container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center custom-margin">
         <div class="col-12 col-md-6 col-lg-4">
             <div>
                 {% block inner_content %}
