--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -21,7 +21,7 @@
             <h3 class="text-center">Add a Blog</h3>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <div class="col-12 col-md-6 offset-md-3">
             <!-- Add blog form -->
             <form action="{% url 'add_blog' %}" method="POST" class="form" enctype="multipart/form-data">
