--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="container">
-    <div class="row">
+    <div class="row custom-margin">
         <div class="col-12 text-center">
             <h2>Blogs</h2>
         </div>
