--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -19,7 +19,7 @@
             <p class="text-center">We look forward to hearing from you!</p>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Contact form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'contact' %}" method="POST" class="form">
