--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -19,7 +19,7 @@
             <h3 class="text-center">Add a Product</h3>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Add product form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'add_product' %}" method="POST" class="form" enctype="multipart/form-data">
