--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -19,7 +19,7 @@
             <h3 class="text-center">Edit a Product</h3>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Edit product form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'edit_product' product.id %}" method="POST" class="form" enctype="multipart/form-data">
