--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -193,7 +193,7 @@
             </div>
         </div>
         <!-- Review section -->
-        <div class="row mt-5">
+        <div class="row mt-5 custom-margin">
             <div class="col-12 col-md-11 offset-md-1">
                 <h4>Reviews</h4>
                 <div class="table-responsive">
