--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,7 +66,7 @@
     </div>
     <div class="row mt-5">
         <div class="col-12">
-            <div class="row">
+            <div class="row custom-margin">
                 {% for product in products %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
                     <div class="card h-100 border-0">
