--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,7 +20,7 @@
             <h2 class="text-center">My Profile</h2>
         </div>
     </div>
-    <div class="row mt-4">
+    <div class="row mt-4 custom-margin">
         <!-- My Profile Nav Pills-->
         <div class="col-12 col-md-5 col-lg-4 offset-xl-1">
             <!-- Nav pills modified from Bootstrap 5 and GymFit Website, details in READEME -->
