--- a/reviews/templates/reviews/create_review.html
+++ b/reviews/templates/reviews/create_review.html
@@ -16,7 +16,7 @@
             <h2 class="text-center">Create a Product Review</h2>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Product review form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'create_review' product.id %}" method="POST" class="form">
