--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -16,7 +16,7 @@
             <h2 class="text-center">Update a Product Review</h2>
         </div>
     </div>
-    <div class="row mt-3">
+    <div class="row mt-3 custom-margin">
         <!-- Edit product review form -->
         <div class="col-12 col-md-6 offset-md-3">
             <form action="{% url 'edit_product_review' review.id %}" method="POST" class="form">
