--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -106,30 +106,6 @@
                                             Delete
                                         </button>
                                     </small>
-                                    <!-- Deletion confirmation Bootstrap modal -->
-                                    <div class="modal fade" id="deleteModal" tabindex="-1"
-                                        aria-labelledby="Delete product confirmation modal" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <p class="text-center">Are you sure you want to delete
-                                                        {{ product.name }}?</p>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-sm btn-grey"
-                                                        data-bs-dismiss="modal">Cancel</button>
-                                                    <a href="" id="actualDeleteBtn" aria-label="Link to delete product">
-                                                        <button type="button"
-                                                            class="btn btn-sm btn-danger">Delete</button>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                     {% endif %}
                                 </div>
                             </div>
@@ -137,6 +113,30 @@
                     </div>
                 </div>
                 {% endfor %}
+                <!-- Deletion confirmation Bootstrap modal -->
+                <div class="modal fade" id="deleteModal" tabindex="-1"
+                    aria-labelledby="Delete product confirmation modal" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p class="text-center">Are you sure you want to delete this product?
+                                    (ID:<span id="productId"></span>)
+                                </p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-grey"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <a href="" id="actualDeleteBtn" aria-label="Link to delete product">
+                                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -167,7 +167,7 @@
             window.location.replace(currentUrl);
         }
     })
-    
+
     // Used from Stack Overflow, details in README
     $('#deleteModal').on('shown.bs.modal', function (event) {
         $("#productId").text($(event.relatedTarget).data('id'));
